# evalyn_asiacrypt

./: -files | xargs wc -l | tail -n 1 | awk '{print $1}'  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  print.sh  rust-toolchain.toml  working_tree.txt
.cargo/: config.toml
atomic_proof/: Cargo.toml
atomic_proof/src/: atomic_pop.rs  atomic_protocol.rs  lib.rs  utils.rs
atomic_proof/src/pop/: arithmetic_expression.rs  groth16.rs  mlpcs.rs  mod.rs
atomic_proof/src/protocols/: add.rs  batchpoint.rs  batchproj.rs  batchproj_field.rs  concat.rs  eq.rs  grandprod.rs  hadamard.rs  lincomb.rs  litebullet.rs  mod.rs  mul.rs  sub.rs  zero.rs
composite/: Cargo.toml  cargo.toml
composite/example/: experiment_nn.rs
composite/src/: evalyn.rs  lib.rs
composite/src/protocols/: activation.rs  fsbatch.rs  fsbatch_groth.rs  lookup.rs  mod.rs  nn.rs  range.rs
composite/src/utils/: matop.rs  mock_nn.rs  mod.rs  table_builder.rs
fsproof/: Cargo.toml
fsproof/src/: batch_r1cs.rs  fs_trans.rs  helper_trans.rs  lib.rs  poseidon.rs
mat/: Cargo.toml
mat/src/: data_structures.rs  lib.rs
mat/src/protocols/: batchpcs.rs  kronecker.rs  litebullet.rs  mod.rs  proj.rs  scalars.rs  zkip.rs
mat/src/utils/: fiat_shamir.rs  linear.rs  matdef.rs  matop.rs  mod.rs  xi.rs  zktr.rs
poly-commit/: Cargo.toml
poly-commit/bench-templates/: Cargo.toml
poly-commit/bench-templates/src/: lib.rs
poly-commit/src/: data_structures.rs  lib.rs
poly-commit/src/hyrax/: tests.rs
poly-commit/src/ipa_pc/: mod.rs
poly-commit/src/kzg10/: mod.rs
poly-commit/src/linear_codes/: utils.rs
poly-commit/src/linear_codes/multilinear_brakedown/: tests.rs
poly-commit/src/linear_codes/multilinear_ligero/: tests.rs
poly-commit/src/linear_codes/univariate_ligero/: tests.rs
poly-commit/src/smart_pc/: data_structures.rs  fiat_shamir.rs  mod.rs  sub_protocols.rs  utils.rs  xi.rs
poly-commit/src/sonic_pc/: data_structures.rs
