[package]
name = "composite"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_proof = { path = "../atomic_proof", features = ["std", "parallel"] }
mat = { path = "../mat", features = ["std", "parallel", "r1cs"] }
fsproof = { path = "../fsproof", features = ["std", "parallel"] }
ark-poly-commit = { path = "../poly-commit", features = ["std", "parallel"] }

ark-ff = { version = "^0.5.0", features = ["std", "parallel"] }
ark-std = { version = "^0.5.0", features = ["std", "parallel"] }
ark-poly = { version = "^0.5.0", features = ["std", "parallel"] }
ark-relations = { version = "^0.5.0", features = ["std"] }
ark-r1cs-std = { version = "^0.5.0", features = ["std"] }
ark-crypto-primitives = { version = "^0.5.0", features = ["std", "sponge", "r1cs"] }
ark-groth16 = { version = "^0.5.0", features = ["std", "parallel"] }
ark-serialize = { version = "^0.5.0", features = ["std", "derive"] }
ark-ec = { version = "^0.5.0", features = ["std", "parallel"] }


ark-bls12-381 = { version = "^0.5.0", features = ["std", "curve"] }

rayon = "1.7"
rand = "0.9"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }


[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[features]
default = ["std", "parallel"]
std = []
parallel = []


[[example]]
name = "experiment_nn"
path = "example/experiment_nn.rs"
