[package]
name = "mat"
version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-poly-commit = { path = "../poly-commit", features = ["std", "parallel"] }

ark-serialize = { version = "^0.5.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0", default-features = false }
ark-poly = {version = "^0.5.0", default-features = false }
ark-crypto-primitives = {version = "^0.5.0", default-features = false, features = ["sponge", "merkle_tree", "r1cs"], optional = true }
ark-std = { version = "^0.5.0", default-features = false }
ark-groth16 = { version = "^0.5.0", default-features = false, optional = true, features = ["parallel"] }
ark-bls12-381 = { version = "^0.5.0", default-features = false, features = [ "curve" ] }

blake2 = { version = "0.10", default-features = false }
derivative = { version = "2", features = [ "use_core" ] }
digest = "0.10"

ark-relations = { version = "^0.5.0", default-features = false, optional = true }
ark-r1cs-std = { version = "^0.5.0", default-features = false, optional = true }

hashbrown = { version = "0.15", default-features = false, features = ["inline-more", "allocator-api2"], optional = true }
rand = { version = "0.9.0", optional = true }
rayon = { version = "1", optional = true }
merlin = { version = "3.0.0", default-features = false }

sha2 = "0.10.8"

libc = "0.2"



[target.'cfg(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64", target_has_atomic = "ptr"))'.dependencies]
ahash = { version = "0.8", default-features = false}

[target.'cfg(not(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64", target_has_atomic = "ptr")))'.dependencies]
fnv = { version = "1.0", default-features = false }

[dev-dependencies]
ark-ed-on-bls12-381 = { version = "^0.5.0", default-features = false }
ark-bls12-381 = { version = "^0.5.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "^0.5.0", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "^0.5.0", default-features = false, features = [ "curve" ] }


rand_chacha = { version = "0.9.0", default-features = false }

[target.'cfg(target_arch = "aarch64")'.dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[features]
default = [ "std", "parallel", "r1cs" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std", "ark-relations/std", "ark-serialize/std", "ark-crypto-primitives/std", "ark-groth16/std"]
r1cs = [ "ark-relations", "ark-r1cs-std", "hashbrown", "ark-crypto-primitives/r1cs", "ark-groth16"]
parallel = [ "rayon", "rand" ]
