[package]
name = "ark-poly-commit"
version = "0.5.0"
authors = [ "arkworks contributors" ]
description = "A library for constructing polynomial commitment schemes"
repository = "https://github.com/mirandaprivate/poly-commit"
keywords = [ "cryptography", "commitments", "polynomials", "zkSNARKs" ]
categories = [ "cryptography" ]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-serialize = { version = "^0.5.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0", default-features = false }
ark-poly = { version = "^0.5.0", default-features = false }
ark-crypto-primitives = { version = "^0.5.0", default-features = false, features = ["sponge", "merkle_tree"] }
ark-std = { version = "^0.5.0", default-features = false, features = [ "std" ] }
ark-relations = { version = "^0.5.0", default-features = false, optional = true }
ark-r1cs-std = { version = "^0.5.0", default-features = false, optional = true }

blake2 = { version = "0.10", default-features = false }
derivative = { version = "2", features = [ "use_core" ] }
digest = "0.10"
hashbrown = { version = "0.15", default-features = false, features = ["inline-more", "allocator-api2"], optional = true }
rayon = { version = "1", optional = true }
rand = { version = "0.8.0", optional = true }
merlin = { version = "3.0.0", default-features = false }

sha2 = "0.10.8"
libc = "0.2"


# 暂时注释掉所有 benchmark
# [[bench]]
# name = "ipa_times"
# path = "benches/ipa_times.rs"
# harness = false

# [[bench]]
# name = "brakedown_times"
# path = "benches/brakedown_ml_times.rs"
# harness = false

# [[bench]]
# name = "ligero_ml_times"
# path = "benches/ligero_ml_times.rs"
# harness = false

# [[bench]]
# name = "hyrax_times"
# path = "benches/hyrax_times.rs"
# harness = false

# [[bench]]
# name = "size"
# path = "benches/size.rs"
# harness = false

# [[bench]]
# name = "experiment"
# path = "benches/experiment.rs"
# harness = false

# [[bench]]
# name = "bench_op"
# path = "benches/bench_op.rs"
# harness = false


[target.'cfg(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64", target_has_atomic = "ptr"))'.dependencies]
ahash = { version = "0.8", default-features = false}

[target.'cfg(not(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64", target_has_atomic = "ptr")))'.dependencies]
fnv = { version = "1.0", default-features = false }

[dev-dependencies]
ark-ed-on-bls12-381 = { version = "^0.5.0", default-features = false }
ark-bls12-381 = { version = "^0.5.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "^0.5.0", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "^0.5.0", default-features = false, features = [ "curve" ] }
rand_chacha = { version = "0.3.0", default-features = false }

criterion = "0.7"
ark-pcs-bench-templates = { path = "bench-templates" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[features]
default = [ "std", "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std", "ark-relations/std", "ark-serialize/std", "ark-crypto-primitives/std" ]
r1cs = [ "ark-relations", "ark-r1cs-std", "hashbrown", "ark-crypto-primitives/r1cs"]
print-trace = [ "ark-std/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-std/parallel", "rayon", "rand" ]
